Revision history for perl distribution App-tt

0.11 Not Released
 - Fix bug where editing would split tags on "-"
 - Converted to "subcommand" from Applify

0.10 2019-02-04T09:35:24+0100
 - Fix "tt log -1" when running in January
 - Fix "tt log" when specifying interval

0.09 2018-09-28T11:17:05+0900
 - Add "export" action

0.08 2018-09-02T22:29:25+0200
 - Fix Can't locate object method "sysread" via package "IO::Handle" #3

0.07 2018-08-20T17:54:54+0200
 - Removed "analyze" action

0.06 2017-10-16T09:30:00+0200
 - Fix sorting "tt log" dates

0.05 2017-06-24T10:19:34+0200
 - Add support for "tt edit" or "tt edit <date>"

0.04 2016-09-26T09:02:00+0200
 - Fix setting default "stop" time HH:MM

0.03 2016-09-17T20:37:18+0200
 - Fix "register" help output
 - Allow register to only take hh:mm:ss as "stop"
 - Change "stop" action to use the same date as "start"

0.02 2016-07-19T11:02:15+0200
 - Fix double printing of messages
 - Fix uninitialized warnings
 - Make "register" command easier to copy/paste

0.01 2016-01-04T08:28:38+0100
 - Add action "analyze"
 - Add action "log"
 - Add action "register"
 - Add action "start" and "stop"
 - Add action "status"