@@ -13,7 +13,9 @@ use File::Path 'make_path';
 use File::Spec;
 use IO::Handle;
 use JSON::XS qw(decode_json encode_json);
+use List::Util 'uniq';
 use Time::Piece;
+
 use constant DEBUG => $ENV{APP_TT_DEBUG} || 0;
 
 option str => project => 'Project name. Normally autodetected', alias => 'p';
@@ -21,6 +23,8 @@ option str => tag => 'Tags for an event', alias => 't', n_of => '@';
 
 documentation 'App::tt';
 version 'App::tt';
+
+our $NOW = localtime;
 
 $ENV{EDITOR}         ||= 'nano';
 $ENV{TT_ROUND_UP_AT} ||= 30;
@@ -58,43 +62,35 @@ subcommand status => 'Show current status' => sub { };
 
 sub command_edit {
   my $self = shift;
-  my $dir  = readlink($self->_root) || $self->_root;
-  my ($code, $date, @files) = ('');
+  return $self->_edit_with_editor($_[0]) if @_ and -f $_[0];    # Edit a given file
 
-  if (@_ and -f $_[0]) {
-    return $self->_edit_with_editor($_[0]);
-  }
-  elsif (-t STDIN) {
-    1;    # edit last entry
-  }
-  else {
+  # Edit all files with code from STDIN
+  my $code = '';
+  unless (-t STDIN) {
     $code .= $_ while <STDIN>;
     $code = "sub {$code}" unless $code =~ /^\s*sub\b/s;
     $code = eval "use 5.10.1;$code" or die "Could not compile code from STDIN: $@\n";
   }
 
-  find {
-    no_chdir => 0,
-    wanted   => sub {
-      return unless /^(\d+)-(\d+)_(.*)\.trc$/;
-      return if $date and not /$date/;
-      my $f     = abs_path $_;
-      my $event = decode_json(_slurp($f));
-      local %_ = (date => $1, file => $f, hms => $2, project => $3);
-      $event->{tags} ||= [];
-      push @files, $f if !$self->project or $event->{project} eq $self->project;
-      return unless $code and $self->$code($event);
-      my $trc_file
-        = abs_path($self->_trc_path($event->{project}, $self->_from_iso_8601($event->{start})));
-      $self->_fill_duration($event);
-      _spurt(encode_json($event) => $trc_file);
-      unlink $f or die "rm $f: $!" if $f ne $trc_file;
-    }
-  }, $dir;
+  my @files;
+  find(
+    {
+      no_chdir => 0,
+      wanted   => sub {
+        return unless /^(\d+)-(\d+)_(.*)\.trc$/;
+        my $trc_file = abs_path $_;
+        local %_ = (date => $1, file => $trc_file, hms => $2, project => $3);
+        my $event = $self->_load($trc_file);
+        push @files, $event->{path};
+        $self->_save($event) if $code and $self->$code($event);
+        unlink $trc_file or die "rm $trc_file: $!" unless $trc_file eq $event->{path};
+      },
+    },
+    $self->_root,
+  );
 
-  if (@files == 1 or !$code) {
-    return $self->_edit_with_editor(+(sort { $b cmp $a } @files)[0]);
-  }
+  # Edit the last file
+  return $self->_edit_with_editor((sort { $b cmp $a } @files)[0]) if @files and !$code;
 
   return 0;
 }
@@ -118,11 +114,9 @@ sub command_export {
     $res->{rounded} += $rounded;
 
     $self->_say(
-      '%s,%s,%s,%s,%s,%s',
-      $event->{start}->ymd,
-      $event->{project} || 'unknown',
-      $hours, $rounded,
-      join(' ', grep {$_} map { split /[, ]/ } @{$event->{tags}}),
+      '%s,%s,%s,%s,%s,%s', $event->{start}->ymd,
+      $event->{project}, $hours, $rounded,
+      join(',', grep {$_} map { split /[, ]/ } @{$event->{tags}}),
       $event->{description} // ''
     );
   }
@@ -139,7 +133,7 @@ sub command_export {
 sub command_help {
   my $self  = shift;
   my $for   = shift || 'app';
-  my $today = $self->_now->ymd;
+  my $today = $NOW->ymd;
   my @help;
 
   if ($for eq 'app') {
@@ -192,114 +186,69 @@ sub command_log {
 }
 
 sub command_register {
-  my ($self, $start, $stop, $project, $description, $tags) = @_;
-  my ($trc_file, %event);
+  my ($self, $start, $stop) = @_;
+  return $self->command_help('register') unless $start and $stop and $self->project;
 
-  if (@_ == 1 and !-t STDIN) {
-    while (<STDIN>) {
-      next if /^\s*#/;
-      chomp;
-      my @args = split /\t/;
-      $self->command_register(@args) if $args[0] and $args[1] and $args[2];
-    }
-    return 0;
-  }
+  $start = $self->_time(str => $start);
+  $stop  = $self->_time(str => $stop, ref => $start);
 
-  return $self->command_help('register') unless $start and $stop and $project;
-
-  $description ||= '';
-  $tags        ||= '';
-  $trc_file = $self->_trc_path($project, $self->_from_iso_8601($start));
-
-  if (my $hms = $stop =~ /^(\d+:\d+:\d+)$/ ? $1 : '') {
-    $stop = $start;
-    $stop =~ s!\d+:\d+:\d+$!$hms!;
-  }
-
-  %event = (
+  my %event = (
     __CLASS__   => 'App::TimeTracker::Data::Task',
-    project     => $project,
+    project     => $self->project,
     start       => $start,
     stop        => $stop,
     user        => scalar(getpwuid $<),
-    tags        => [split /,/, $tags || ''],
-    description => $description || $self->description,
+    tags        => [$self->_tags],
+    description => $self->description,
   );
 
+  my $trc_file = $self->_trc_path($self->project, $start);
   if (-e $trc_file) {
-    $self->_diag("Already registered: $start $stop $project $description $tags");
+    $self->_diag("$trc_file already exists.");
     return 1;
   }
-
-  $self->_fill_duration(\%event);
 
   if ($event{seconds} < $ENV{TIMETRACKER_MIN_TIME}) {
-    $self->_diag("Skipping $project - $start - $stop. Too short duration ($event{duration})");
+    $self->_diag("Too short duration ($event{duration})");
     return 1;
   }
 
-  make_path(dirname($trc_file));
-  _spurt(encode_json(\%event) => $trc_file);
+  $self->_save(\%event);
   $self->_say('Registered "%s" at %s with duration %s', @event{qw(project start duration)});
   return 0;
 }
 
 sub command_start {
   my ($self, @args) = @_;
+
   my $event = {};
-  my $trc_file;
+  $event->{start} = $self->_time(+(grep {/\d+\:/} @args)[0]);
 
-  $self->_set_now(@args);
-  $self->project($args[0]) if $args[0] and $args[0] =~ /^[A-Za-z0-9-]+$/;
-  $self->project(basename(Cwd::getcwd)) if -d '.git' and !$self->project;
-  return $self->command_help('start') unless $self->project;
+  $event->{project} ||= $self->project;
+  $event->{project} ||= (grep {/^[A-Za-z0-9-]+$/} @args)[0];
+  $event->{project} ||= basename(Cwd::getcwd) if -d '.git';
+  return $self->command_help('start') unless $event->{project};
 
-  $trc_file = $self->_trc_path($self->project, $self->_now);
-  warn "[APP_TT] start $trc_file\n" if DEBUG;
-
-  if (!$self->project) {
-    $self->_diag(
-      "Cannot 'start' with unknown project name. Are you sure you are inside a git project?");
-    return 1;    # Operation not permitted
-  }
-
-  # change start time on current event
-  if ($self->{custom_now}) {
-    my ($trc_file, $e) = $self->_get_previous_event;
-    if ($e->{start} and !$e->{stop}) {
-      $event = $e;
-      $event->{start} = $self->_now->datetime;
-    }
-  }
-
-  $self->_stop_previous({start => 1}) unless $event->{start};
+  $self->_stop_previous(@args);
   $self->_add_event_info($event);
-  make_path(dirname($trc_file));
-  _spurt(encode_json($event) => $trc_file);
-  _spurt($trc_file => File::Spec->catfile($self->_root, 'previous'));
-  $self->_say('Started working on project "%s" at %s.', $event->{project}, $self->_now->hms(':'));
+  $self->_save($event);
+  _spurt($event->{path} => File::Spec->catfile($self->_root, 'previous'));
+  $self->_say('Started working on project "%s" at %s.',
+    $event->{project}, $event->{start}->hms(':'));
   return 0;
 }
 
 sub command_stop {
-  my $self = shift;
-  my ($trc_file, $event) = $self->_get_previous_event;
-
-  if ($event->{start}) {
-    my $now = Time::Piece->new;
-    $self->{now} = $self->_from_iso_8601($event->{start});
-    $self->{now} = $self->_tp(H => $now->hour, M => $now->minute, S => $now->second);
-  }
-
-  $self->_set_now(@_);
-  $self->_stop_previous;
+  my $self      = shift;
+  my $exit_code = $self->_stop_previous(@_);
+  $self->_diag("No previous event to stop.") if $exit_code == 3;
+  return $exit_code;
 }
 
 sub command_status {
-  my $self = shift;
-  my ($trc_file, $event) = $self->_get_previous_event;
-
-  warn "[APP_TT] status $trc_file\n" if DEBUG;
+  my $self  = shift;
+  my $event = $self->_get_previous_event;
+  warn "[APP_TT] status $event->{path}\n" if DEBUG;
 
   if (!$event->{start}) {
     $self->_say('No event is being tracked.');
@@ -311,7 +260,7 @@ sub command_status {
     return 0;
   }
   else {
-    my $duration = $self->_now - $self->_from_iso_8601($event->{start}) + $self->_tzoffset;
+    my $duration = $NOW - $event->{start} + $self->_tzoffset;
     $self->_say('Been working on "%s", for %s',
       $event->{project}, $self->_hms_duration($duration, 'hms'));
     return 0;
@@ -321,67 +270,54 @@ sub command_status {
 sub _add_event_info {
   my ($self, $event) = @_;
 
-  $event->{__CLASS__} ||= 'App::TimeTracker::Data::Task';
-  $event->{project}   ||= $self->project;
-  $event->{seconds}   ||= undef;
-  $event->{start}     ||= $self->_now->datetime;
-  $event->{user}      ||= scalar(getpwuid $<);
-  $event->{tags}      ||= [];
-
-  $event->{description} = $self->description if $self->description;
-
-  my $tags = $self->tag || [];
-  push @{$event->{tags}}, $_ for ref $tags ? @$tags : ($tags);
+  $event->{__CLASS__}   ||= 'App::TimeTracker::Data::Task';
+  $event->{description} ||= $self->description // '';
+  $event->{project}     ||= $self->project;
+  $event->{seconds}     ||= undef;
+  $event->{tags}        ||= [uniq @{$event->{tags} || []}, $self->_tags];
+  $event->{user}        ||= scalar(getpwuid $<);
 }
 
 sub _edit_with_editor {
   require File::Temp;
   my ($self, $trc_file) = @_;
-  my $fh    = File::Temp->new;
-  my $event = decode_json(_slurp($trc_file));
+  my $event = $self->_load($trc_file);
 
-  printf $fh "# %s\n", $trc_file;
-
+  my $fh = File::Temp->new;
+  printf $fh "# %s\n", $event->{path};
   for my $k (qw(project tags start stop user)) {
     $event->{$k} = join ', ', @{$event->{$k} || []} if $k eq 'tags';
-    printf $fh "%-8s %s\n", "$k:", $event->{$k};
+    $event->{$k} = $event->{$k}->datetime           if $k eq 'start' or $k eq 'stop';
+    printf $fh "%-8s %s\n", "$k:", $event->{$k} // '';
   }
 
   close $fh;
+  $self->_diag("Edit $event->{path}");
   system $ENV{EDITOR} => "$fh";
 
   for (split /\n/, _slurp("$fh")) {
     my ($k, $v) = /^(\w+)\s*:\s*(.+)/ or next;
     $v = [grep {length} split /[\s,]+/, $v] if $k eq 'tags';
+    $v = $self->_time(str => $v) if $k eq 'start';
+    $v = $self->_time(str => $v, ref => $event->{start}) if $k eq 'stop';
     $event->{$k} = $v;
   }
 
-  $self->_fill_duration($event);
-  _spurt(encode_json($event) => $trc_file);
-
+  $self->_save($event);
+  unlink $trc_file or die "rm $trc_file: $!" unless $trc_file eq $event->{path};
   return 0;
 }
 
 sub _diag {
   my ($self, $format) = (shift, shift);
-  warn "$format\n" unless @_;
-  warn sprintf "$format\n", @_;
+  return warn "$format\n" unless @_;
+  return warn sprintf "$format\n", @_;
 }
 
 sub _say {
   my ($self, $format) = (shift, shift);
   print "$format\n" unless @_;
   print sprintf "$format\n", @_ if @_;
-}
-
-sub _fill_duration {
-  my ($self, $event) = @_;
-  my $start    = $self->_from_iso_8601($event->{start});
-  my $stop     = $self->_from_iso_8601($event->{stop});
-  my $duration = $stop - $start;
-
-  $event->{seconds}  = $duration->seconds;
-  $event->{duration} = $self->_hms_duration($duration);
 }
 
 sub _fill_log_days {
@@ -394,24 +330,13 @@ sub _fill_log_days {
   } 1 .. $interval;
 }
 
-sub _from_iso_8601 {
-  my ($self, $str) = @_;
-  $str =~ s/(\d)\s(\d)/${1}T${2}/;
-  $str =~ s/\.\d+$//;
-  return Time::Piece->strptime($str, '%Y-%m-%dT%H:%M:%S');
-}
-
 sub _get_previous_event {
   my $self     = shift;
-  my $trc_file = File::Spec->catfile($self->_root, 'previous');
-
-  warn "[APP_TT] _get_previous_event $trc_file\n" if DEBUG;
-
-  return $trc_file, {} unless -r $trc_file;
-  $trc_file = _slurp($trc_file);    # $ROOT/previous contains path to last .trc file
-  $trc_file =~ s!\s*$!!;
-  return $trc_file, {} unless -r $trc_file;
-  return $trc_file, decode_json(_slurp($trc_file)); # slurp $ROOT/2015/08/20150827-085643_app_tt.trc
+  my $previous = File::Spec->catfile($self->_root, 'previous');
+  return {path => ''} unless -r $previous;
+  my $trc_file = _slurp($previous);    # $ROOT/previous contains path to last .trc file
+  return {path => $trc_file} unless -r $trc_file;
+  return -r $trc_file ? $self->_load($trc_file) : {path => $trc_file};
 }
 
 sub _group_by_day {
@@ -453,9 +378,18 @@ sub _hms_duration {
   return sprintf '%sh %sm %ss', $hours, $minutes, $seconds;
 }
 
+sub _load {
+  my ($self, $trc_file) = @_;
+  my $trc = decode_json(_slurp($trc_file));
+  $trc->{path} = $trc_file;
+  $trc->{tags} = [map { split /\s*,\s*/, $_ } @{$trc->{tags} || []}];
+  $trc->{$_}   = $self->_time($trc->{$_}) for grep { $trc->{$_} } qw(start stop);
+  return $trc;
+}
+
 sub _log {
   my $self       = shift;
-  my $tags       = join ',', @{$self->tag};
+  my $tags       = join ',', $self->_tags;
   my @project_re = map {qr{^$_\b}} split /,/, $self->project || '.+';
 
   my $res = {events => 0, log => [], max_project_chr => 0, seconds => 0};
@@ -472,11 +406,11 @@ sub _log {
   $res->{start_at} ||= 0;
 
   if ($res->{interval} =~ m!^y!) {
-    $res->{when} = $self->_tp(Y => $self->_now->year + $res->{start_at}, m => 1, d => 1);
+    $res->{when} = $self->_time(Y => $NOW->year + $res->{start_at}, m => 1, d => 1);
     $res->{path} = File::Spec->catdir($self->_root, $res->{when}->year);
   }
   else {
-    $res->{when} = $self->_tp(m => $self->_now->mon + $res->{start_at}, d => 1);
+    $res->{when} = $self->_time(m => $NOW->mon + $res->{start_at}, d => 1);
     $res->{path}
       = File::Spec->catdir($self->_root, $res->{when}->year, sprintf '%02s', $res->{when}->mon);
   }
@@ -490,7 +424,7 @@ sub _log {
       return if @project_re and !grep { $event->{project} =~ $_ } @project_re;
       return if $tags       and !grep { $tags =~ /\b$_\b/ } @{$event->{tags}};
       return unless $event->{seconds};
-      $event->{start} = $self->_from_iso_8601($event->{start});
+      $event->{start} = $self->_time($event->{start});
       push @{$res->{log}},
         $self->_fill_log_days(@{$res->{log}} ? $res->{log}[-1]{start} : $res->{when},
         $event->{start})
@@ -515,28 +449,43 @@ sub _log {
   return $res;
 }
 
-sub _now { shift->{now} ||= localtime }
-
 sub _root {
-  shift->{root} ||= $ENV{TIMETRACKER_HOME} || do {
+  my $self = shift;
+  return $self->{root} if $self->{root};
+
+  my $root = $ENV{TIMETRACKER_HOME};
+  $root ||= do {
     my $home = File::HomeDir->my_home || File::Spec->curdir;
     File::Spec->catdir($home, '.TimeTracker');
   };
+
+  return $self->{root} = readlink($root) || $root;
 }
 
-sub _set_now {
+sub _save {
+  my ($self, $event) = @_;
+  my %event = %$event;
+
+  delete $event{path};
+  $event{start} = $event->{start}->datetime if $event->{start};
+  $event{stop}  = $event->{stop}->datetime  if $event->{stop};
+
+  my $duration = $event->{stop} && $event->{start} ? $event->{stop} - $event->{start} : undef;
+  $event{seconds} = $duration->seconds if defined $duration;
+  $event{duration} = $self->_hms_duration($duration) if defined $duration;
+
+  $event->{path} = $self->_trc_path($event->{project}, $event->{start});
+  make_path(dirname($event->{path})) unless -d dirname($event->{path});
+  _spurt(encode_json(\%event) => $event->{path});
+}
+
+sub _tags {
   my $self = shift;
-
-  if (my ($hm) = grep {/^\d+:\d+$/} @_) {
-    $hm =~ /^(\d+):(\d+)$/;
-    $self->{custom_now} = $hm;
-    $self->{now}        = $self->_tp(H => $1, M => $2);
-  }
-
-  return $self;
+  return $self->tag(shift) if @_;
+  return uniq map { split /,/, $_ } @{$self->tag || []};
 }
 
-sub _tzoffset { shift->_now->tzoffset }
+sub _tzoffset { $NOW->tzoffset }
 
 # From Mojo::Util
 sub _slurp {
@@ -544,6 +493,7 @@ sub _slurp {
   die qq{Can't open file "$path": $!} unless open my $file, '<', $path;
   my $content = '';
   while ($file->sysread(my $buffer, 131072, 0)) { $content .= $buffer }
+  $content =~ s!\s*$!!;
   return $content;
 }
 
@@ -556,58 +506,72 @@ sub _spurt {
 }
 
 sub _stop_previous {
-  my ($self,     $args)  = @_;
-  my ($trc_file, $event) = $self->_get_previous_event;
+  my ($self, @args) = @_;
 
-  if (!$event->{start} or $event->{stop}) {
-    return 0 if $args->{start};
-    $self->_diag("No previous event to stop.");
-    return 3;    # No such process
-  }
+  my $event = $self->_get_previous_event;
+  return 3 if !$event->{start} or $event->{stop};    # 3 == No such process
 
-  my $duration = $self->_now - $self->_from_iso_8601($event->{start}) + $self->_tzoffset;
+  $event->{stop} = $self->_time(+(grep {/\d+\:/} @args)[0]);
 
-  # Probably some invalid timestamp was given as input
-  if ($duration->seconds < 0) {
-    die "Cannot log event shorter than a second! Need to manually fix $trc_file";
-  }
+  my $duration = $event->{stop} - $event->{start} + $self->_tzoffset;
+  die "Cannot log event shorter than a second! Need to manually edit $event->{path}"
+    if $duration->seconds < 0;
 
-  $event->{duration} = $self->_hms_duration($duration);
-  $event->{seconds}  = $duration->seconds;
-  $event->{stop}     = $self->_now->datetime;
-
-  if ($event->{seconds} < $ENV{TIMETRACKER_MIN_TIME}) {
+  if ($duration->seconds < $ENV{TIMETRACKER_MIN_TIME}) {
     $self->_say('Dropping log event for "%s" since worked less than five minutes.',
       $event->{project});
-    unlink $trc_file or die "rm $trc_file: $!";
+    unlink $event->{path} or die "rm $event->{path}: $!";
     return 52;
   }
   else {
     $self->_add_event_info($event);
-    _spurt(encode_json($event) => $trc_file);
+    $self->_save($event);
     $self->_say('Stopped working on "%s" after %s',
       $event->{project}, $self->_hms_duration($duration, 'hms'));
     return 0;
   }
 }
 
-sub _tp {
-  my ($self, %t) = @_;
+sub _time {
+  my $self = shift;
+  my %t    = @_ == 1 ? (str => shift) : (@_);
 
-  $t{Y} ||= $self->_now->year;
-  $t{m} //= $self->_now->mon;
-  $t{d} //= $self->_now->mday;
-  $t{H} ||= 0;
-  $t{M} ||= 0;
-  $t{S} ||= 0;
+  if ($t{str}) {
+    my ($ymd, $hms) = split /[T\s]/, $t{str};
+    ($hms, $ymd) = ($ymd, '') if !$hms and $ymd =~ m!:!;
+    $t{Y} = $1 if $ymd =~ s!(\d{4})!!;
+    $t{m} = $1 if $ymd =~ s!0?(\d{1,2})-(\d+)!$2!;
+    $t{d} = $1 if $ymd =~ s!0?(\d{1,2})!!;
+    $t{H} = $1 if $hms =~ s!0?(\d{1,2})!!;
+    $t{M} = $1 if $hms =~ s!0?(\d{1,2})!!;
+    $t{S} = $1 if $hms =~ s!0?(\d{1,2})!!;
+  }
+
+  my $ref = $t{ref} || $NOW;
+  $ref = $self->_time($ref) unless ref $ref;
+  $t{Y} ||= $ref->year;
+  $t{m} //= $ref->mon;
+  $t{d} //= $ref->mday;
+  $t{S} //= defined $t{H} || defined $t{M} ? 0 : $ref->second;
+  $t{M} //= defined $t{H} ? 0 : $ref->min;
+  $t{H} //= $ref->hour;
 
   if ($t{m} <= 0) {
     $t{m} = 12 - $t{m};
     $t{Y}--;
   }
 
-  Time::Piece->strptime(sprintf('%s-%s-%sT%s:%s:%s+0000', @t{qw(Y m d H M S)}),
-    '%Y-%m-%dT%H:%M:%S%z');
+  eval {
+    $t{iso} = sprintf '%s-%02s-%02sT%02s:%02s:%02s', @t{qw(Y m d H M S)};
+    $t{tp}  = Time::Piece->strptime("$t{iso}+0000", '%Y-%m-%dT%H:%M:%S%z');
+  } or do {
+    $@ =~ s!\r?\n$!!;
+    $@ =~ s!\sat\s\W+.*!! unless DEBUG;
+    die "Invalid time: $t{str} ($t{iso}): $@\n" if $t{str};
+    die "Invalid time: $t{iso}: $@\n";
+  };
+
+  return $t{tp};
 }
 
 sub _trc_path {
@@ -618,7 +582,7 @@ sub _trc_path {
   $project =~ s!\W!_!g;
   $file = sprintf '%s-%s_%s.trc', $t->ymd(''), $t->hms(''), $project;
 
-  return File::Spec->catfile($self->_root, $t->year, $month, $file);
+  return abs_path(File::Spec->catfile($self->_root, $t->year, $month, $file));
 }
 
 app {
