@@ -1,7 +1,0 @@
-use lib '.';
-use t::Helper;
-
-my $tt = t::Helper->tt;
-ok $tt->can("command_$_"), "tt $_" for qw(export log start stop status register);
-
-done_testing;
