@@ -2,6 +2,10 @@ Revision history for perl distribution App-tt
 
 0.11 Not Released
  - Fix bug where editing would split tags on "-"
+ - Fix not saving duplicate tags
+ - Changed "tt register" to require -p, -t, arguments
+ - Changed "tt register" to not reading from STDIN
+ - Changed time parsing to even more DWIM
  - Converted to "subcommand" from Applify
 
 0.10 2019-02-04T09:35:24+0100
